component styles. fake events on buttons

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,3 @@
 <agm-header></agm-header>
-<agm-breadcrumbs></agm-breadcrumbs>
-
-<agm-courses-page></agm-courses-page>
-
+<router-outlet></router-outlet>
 <agm-footer></agm-footer>
