--- a/src/app/modules/courses/components/search/search.component.styl
+++ b/src/app/modules/courses/components/search/search.component.styl
@@ -29,6 +29,7 @@
   width 100px
   height 48px
   border-radius 3px
+  transition background 0.3s ease
   background map-get(colors, 'sick-green')
   font 18px/2.56 font-sans-pro
   color map-get(colors, 'white')
