--- a/src/assets/styles/partials/_buttons.styl
+++ b/src/assets/styles/partials/_buttons.styl
@@ -4,6 +4,7 @@
   color map-get(colors, 'white')
   background map-get(colors, 'dark-sky-blue')
   padding 2px 20px
+  transition background 0.3s ease
   &:hover
     background map-get(colors, 'cerulean')
 
