--- a/src/app/modules/courses/components/courses-list/courses-list.component.styl
+++ b/src/app/modules/courses/components/courses-list/courses-list.component.styl
@@ -10,11 +10,14 @@
 .courses-load-more
   width 100%
   height 48px
-  border-radius 6px
-  box-shadow 0 1px 24px 0 rgba(18, 21, 35, 0.08)
-  background-color map-get(colors, 'white')
   border 0
 
   &:hover .courses-load-more-text
     text-decoration none
+
+.no-results
+  margin 70px 0
+  text-align center
+  font 14px/1.5 font-sans-pro
+  text-transform uppercase
 
