--- a/src/assets/styles/styles.styl
+++ b/src/assets/styles/styles.styl
@@ -18,3 +18,7 @@ body
 .page-content-wrapper
   margin-bottom 50px
 
+.panel
+  border-radius 6px
+  box-shadow 0 1px 24px 0 rgba(18, 21, 35, 0.08)
+  background-color map-get(colors, 'white')
