sorting by date. filter by title. ratings

--- a/src/app/modules/courses/components/courses-list-item/courses-list-item.component.html
+++ b/src/app/modules/courses/components/courses-list-item/courses-list-item.component.html
@@ -1,6 +1,6 @@
 <article class="panel courses-list-item"
          [ngClass]="{'top-rated': coursesListItem.topRated}"
-         appHighlight [creationDate]="coursesListItem.creationDate">
+         agmHighlight [creationDate]="coursesListItem.creationDate">
   <div class="content">
     <header class="header">
       <h2 class="title">
