delete course. auth service

--- a/src/app/modules/courses/components/search/search.component.html
+++ b/src/app/modules/courses/components/search/search.component.html
@@ -1,6 +1,6 @@
 <form class="search-form">
   <svg-icon-sprite [src]="'search'" [class]="'search-icon'"></svg-icon-sprite>
-  <label>
+  <label class="search-input-wrapper">
     <input
       class="search-input"
       placeholder="Text to search"
