--- a/src/app/modules/courses/pages/courses-page.component.html
+++ b/src/app/modules/courses/pages/courses-page.component.html
@@ -3,7 +3,7 @@
 <div class="page-container page-content-wrapper">
   <agm-search></agm-search>
   <div class="add-course">
-    <button class="button button-icon button-large button-add-course">
+    <button class="button button-icon button-large button-add-course" (click)="addCourse()">
       <svg-icon-sprite [src]="'plus'" [class]="'icon icon-plus'"></svg-icon-sprite>
       Add course
     </button>
