--- a/src/assets/styles/partials/_buttons.styl
+++ b/src/assets/styles/partials/_buttons.styl
@@ -5,6 +5,7 @@
   background map-get(colors, 'dark-sky-blue')
   padding 2px 20px
   transition background 0.3s ease
+  text-decoration none
   &:hover
     background map-get(colors, 'cerulean')
 
@@ -32,6 +33,7 @@
   box-shadow none
   border-radius 3px
   margin-left 18px
+  text-decoration none
   transition background 0.3s ease
 
 .button-style-primary
@@ -47,6 +49,6 @@
 .button-style-cancel
   font-weight 600
   color map-get(colors, 'slate-grey')
-  background map-get(colors, 'pale-grey')
+  background map-get(colors, 'mishka')
   &:hover
-    background map-get(colors, 'mishka')
+    background map-get(colors, 'pale-grey')
