--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<form #loginForm="ngForm">
+<form class="form" #loginForm="ngForm">
   <p class="form-title">Login</p>
 
   <div class="form-item">
@@ -17,7 +17,7 @@
     <input id="userPassword" type="password" class="form-input" name="password" ngModel required />
   </div>
 
-  <div class="login-actions">
+  <div class="form-buttons between">
     <a href="#" class="forgot-pass-link">Forgot password?</a>
     <button class="button-style-primary" (click)="loginUser(loginForm)" [disabled]="loginForm.invalid">
       Login
