--- a/src/assets/styles/partials/_form.styl
+++ b/src/assets/styles/partials/_form.styl
@@ -1,3 +1,6 @@
+.form
+  padding 24px
+
 .form-title
   font 600 24px/30px font-sans-pro
   color map-get(colors, 'dark')
@@ -5,6 +8,9 @@
 
 .form-item
   margin-bottom 18px
+  position relative
+  &.small
+    max-width 150px
 
 .form-label
   margin-bottom 8px
@@ -17,7 +23,6 @@
   font 12px/18px font-sans-pro
   color map-get(colors, 'steel')
 
-
 .form-input
   padding 6px 12px
   font 400 14px/24px font-sans-pro
@@ -25,3 +30,15 @@
   border 1px solid map-get(colors, 'mishka')
   color: map-get(colors, 'slate-grey')
   width 100%
+  display block
+  /textarea
+    height 110px
+    resize none
+
+.form-buttons
+  display flex
+  align-items center
+  justify-content flex-end
+  padding-top 5px
+  &.between
+    justify-content space-between
