task-7: routing, breadcrumbs, 404 page

--- a/src/app/modules/courses/add-course/components/courses-item-form/courses-item-form.component.html
+++ b/src/app/modules/courses/add-course/components/courses-item-form/courses-item-form.component.html
@@ -31,7 +31,7 @@
     <a class="button-style-cancel" routerLink="/courses">
       Cancel
     </a>
-    <button class="button-style-primary" (click)="save(courseForm)" [disabled]="courseForm.invalid">
+    <button class="button-style-primary" type="button" (click)="save(courseForm)" [disabled]="courseForm.invalid">
       Save
     </button>
   </div>
