--- a/src/app/modules/courses/courses-list/components/courses-list-item/courses-list-item.component.html
+++ b/src/app/modules/courses/courses-list/components/courses-list-item/courses-list-item.component.html
@@ -24,7 +24,7 @@
   </div>
 
   <div class="actions">
-    <button class="button button-icon button-edit" routerLink="/courses/edit/{{coursesListItem.id}}">
+    <button class="button button-icon button-edit" routerLink="/courses/{{coursesListItem.id}}">
       <svg-icon-sprite [src]="'pen'" [class]="'icon icon-pen'"></svg-icon-sprite>
       Edit
     </button>
