--- a/src/app/modules/login/components/login-form/login-form.component.html
+++ b/src/app/modules/login/components/login-form/login-form.component.html
@@ -19,7 +19,7 @@
 
   <div class="form-buttons between">
     <a href="#" class="forgot-pass-link">Forgot password?</a>
-    <button class="button-style-primary" (click)="loginUser(loginForm)" [disabled]="loginForm.invalid">
+    <button class="button-style-primary" type="button" (click)="loginUser(loginForm)" [disabled]="loginForm.invalid">
       Login
     </button>
   </div>
