--- a/src/app/shared/components/breadcrumbs/breadcrumbs.component.styl
+++ b/src/app/shared/components/breadcrumbs/breadcrumbs.component.styl
@@ -8,3 +8,23 @@
   color map-get(colors, 'dark')
   display flex
   align-items center
+
+.menu
+  list-style none
+
+.item
+  display inline
+  font 14px/1 font-sans-pro
+
+.sep
+  color map-get(colors, 'dark-sky-blue')
+
+.link
+  color map-get(colors, 'steel')
+  text-decoration none
+  &:hover
+    color map-get(colors, 'dark')
+
+.last
+  color map-get(colors, 'dark')
+  font-weight 600
