--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,6 +1,6 @@
 <header class="page-header">
   <div class="page-container page-header-container">
-    <a class="site-logo-url" href="/">
+    <a class="site-logo-url" routerLink="/">
       <img class="site-logo" src="assets/logo/logo.png" srcset="assets/logo/logo@2x.png 2x" alt="Video Course">
     </a>
 
