--- a/src/app/modules/courses/add-course/pages/add-course-page.component.html
+++ b/src/app/modules/courses/add-course/pages/add-course-page.component.html
@@ -1,5 +1,5 @@
 <agm-breadcrumbs></agm-breadcrumbs>
 
 <div class="page-container page-content-wrapper">
-  <agm-courses-item-form [courseItem]="courseItem$ | async"></agm-courses-item-form>
+  <agm-courses-item-form [courseItem]="courseItem"></agm-courses-item-form>
 </div>
