--- a/src/app/modules/courses/courses-list/pages/courses-page.component.html
+++ b/src/app/modules/courses/courses-list/pages/courses-page.component.html
@@ -3,7 +3,7 @@
 <div class="page-container page-content-wrapper">
   <agm-search></agm-search>
   <div class="add-course">
-    <a class="button button-icon button-large button-add-course" routerLink="/courses/add">
+    <a class="button button-icon button-large button-add-course" routerLink="/courses/new">
       <svg-icon-sprite [src]="'plus'" [class]="'icon icon-plus'"></svg-icon-sprite>
       Add course
     </a>
