task-7: routing, breadcrumbs, 404 page (#7)

--- a/src/app/shared/components/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/components/breadcrumbs/breadcrumbs.component.html
@@ -1,5 +1,11 @@
 <div class="breadcrumbs">
-  <section class="page-container">
-    Courses
-  </section>
+  <nav class="page-container">
+    <ul class="menu">
+      <li *ngFor="let breadcrumb of breadcrumbs; let isLast = last;" class="item">
+        <a *ngIf="!isLast" routerLink="/{{breadcrumb.url}}" class="link">{{breadcrumb.title}}</a>
+        <span *ngIf="!isLast" class="sep"> / </span>
+        <span *ngIf="isLast" class="last">{{breadcrumb.title}}</span>
+      </li>
+    </ul>
+  </nav>
 </div>
