--- a/src/app/modules/courses-list/components/delete-course-popup/delete-course-popup.component.html
+++ b/src/app/modules/courses-list/components/delete-course-popup/delete-course-popup.component.html
@@ -8,7 +8,7 @@
 
 <mat-dialog-content>
   Are you sure you want to delete<br/>
-  {{title}}?
+  {{name}}?
 </mat-dialog-content>
 
 <mat-dialog-actions>
