--- a/src/app/modules/courses-list/components/courses-list/courses-list.component.html
+++ b/src/app/modules/courses-list/components/courses-list/courses-list.component.html
@@ -1,6 +1,6 @@
-<section class="courses-list" *ngIf="currentCourses$ | async as currentCourses; else noResults">
+<section class="courses-list" *ngIf="currentCourses.length; else noResults">
   <agm-courses-list-item
-    *ngFor="let coursesListItem of currentCourses | orderBy: 'creationDate'"
+    *ngFor="let coursesListItem of currentCourses | orderBy: 'date'"
     [coursesListItem]="coursesListItem"
     (deletedCourse)="onDeletedCourse($event)">
   </agm-courses-list-item>
@@ -9,3 +9,9 @@
 <ng-template #noResults>
   <p class="no-results">No data. Feel free to add new course</p>
 </ng-template>
+
+<button *ngIf="currentCourses.length"
+        class="panel courses-load-more"
+        (click)="loadMore()">
+  <span class="courses-load-more-text">load more</span>
+</button>
