--- a/src/app/modules/courses-list/components/search/search.component.html
+++ b/src/app/modules/courses-list/components/search/search.component.html
@@ -1,4 +1,4 @@
-<form class="search-form">
+<form class="search-form" (ngSubmit)="filterCourses()">
   <svg-icon-sprite [src]="'search'" [class]="'search-icon'"></svg-icon-sprite>
   <label class="search-input-wrapper">
     <input
@@ -7,5 +7,5 @@
       name="searchText"
       [(ngModel)]="searchText" />
   </label>
-  <button type="submit" class="search-submit" (click)="findCourse()">Search</button>
+  <button type="submit" class="search-submit">Search</button>
 </form>
