task-8: login form moved to page. unnecessary user information removed from localstorage

--- a/src/app/modules/login/pages/login-page.component.styl
+++ b/src/app/modules/login/pages/login-page.component.styl
@@ -10,3 +10,9 @@
   width 100%
   max-width 368px
   margin auto
+
+.forgot-pass-link
+  font 12px/18px font-sans-pro
+  color map-get(colors, 'soft-blue')
+  &:hover
+    text-decoration none
