--- a/src/assets/styles/partials/_variables.styl
+++ b/src/assets/styles/partials/_variables.styl
@@ -1,6 +1,7 @@
 font-sans-pro = 'Source Sans Pro', sans-serif
 
 colors = {
+  orange-red: #ff4e33,
   sushi: #8bc34a,
   sick-green: #9bc837,
   pear: #e2f86a,
