--- a/src/app/modules/login/pages/login-page.component.html
+++ b/src/app/modules/login/pages/login-page.component.html
@@ -1,22 +1,32 @@
 <div class="page-container page-content-wrapper">
   <div class="panel login-wrapper">
-    <form class="form" #loginForm="ngForm" (ngSubmit)="loginUser(loginForm)">
-      <p class="form-title">Login</p>
+    <form class="form" [formGroup]="loginForm" (ngSubmit)="onFormSubmit()">
+      <p class="form-title">
+        Login <span *ngIf="error$ | async" class="form-error">Wrong e-mail or password</span>
+      </p>
 
       <div class="form-item">
         <label for="userEmail" class="form-label">
-          E-mail:
-          <span class="form-required">*required</span>
+          E-mail: <span class="form-required">*required</span>
         </label>
-        <input id="userEmail" type="email" class="form-input" name="email" ngModel required />
+        <input
+          id="userEmail"
+          type="email"
+          class="form-input"
+          formControlName="email"
+          [ngClass]="{'error': loginForm.get('email').touched && loginForm.get('email').errors}" />
       </div>
 
       <div class="form-item">
         <label for="userPassword" class="form-label">
-          Password:
-          <span class="form-required">*required</span>
+          Password: <span class="form-required">*required</span>
         </label>
-        <input id="userPassword" type="password" class="form-input" name="password" ngModel required />
+        <input
+          id="userPassword"
+          type="password"
+          class="form-input"
+          formControlName="password"
+          [ngClass]="{'error': loginForm.get('password').touched && loginForm.get('password').errors}" />
       </div>
 
       <div class="form-buttons between">
